Fixed gradient on Firefox

--- a/stylesheets/high.css
+++ b/stylesheets/high.css
@@ -88,6 +88,7 @@ a:hover img { opacity: .7; }
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fff), color-stop(100%, #f0f0f0)); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top, #fff 0%, #f0f0f0 100%); /* Chrome10+,Safari5.1+ */
   background: -o-linear-gradient(top, #fff 0%, #f0f0f0 100%); /* Opera 11.10+ */
+  background: -moz-linear-gradient(top, #fff 0%, #f0f0f0 100%); /* Firefox */
   background: -ms-linear-gradient(top, #fff 0%, #f0f0f0 100%); /* IE10+ */
   background: linear-gradient(top bottom, #fff 0%, #f0f0f0 100%); /* W3C */
   display: inline-block;
@@ -576,6 +577,7 @@ a:hover img { opacity: .7; }
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2c66a4), color-stop(100%, #204c7b)); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top, #2c66a4 0%, #204c7b 100%); /* Chrome10+,Safari5.1+ */
   background: -o-linear-gradient(top, #2c66a4 0%, #204c7b 100%); /* Opera 11.10+ */
+  background: -moz-linear-gradient(top, #2c66a4 0%, #204c7b 100%); /* Firefox */
   background: -ms-linear-gradient(top, #2c66a4 0%, #204c7b 100%); /* IE10+ */
   background: linear-gradient(top bottom, #2c66a4 0%, #204c7b 100%); /* W3C */
   padding: 25px 0 30px 0;
